// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`controllers/comic/sign if CAPTCHA_V3_SITE_KEY env var exists if v2Captcha is passed but v3Captcha is NOT passed should make the correct captcha request 1`] = `
Array [
  "https://www.google.com/recaptcha/api/siteverify",
  "response=v2Token&secret=CAPTCHA_V2_SECRET",
]
`;

exports[`controllers/comic/sign if CAPTCHA_V3_SITE_KEY env var exists if v3Captcha is passed should make the correct captcha request 1`] = `
Array [
  "https://www.google.com/recaptcha/api/siteverify",
  "response=v3Token&secret=CAPTCHA_V3_SECRET",
]
`;

exports[`controllers/comic/sign should return a signed payload for each passed draft cellId in the response 1`] = `
Array [
  Object {
    "cells": Array [
      Object {
        "draftId": "some---draft",
        "filename": "filename",
        "id": "urlId",
        "signData": Object {
          "signedRequest": "signedRequest",
          "url": "url",
        },
      },
      Object {
        "draftId": "new---draft",
        "filename": "filename",
        "id": "urlId",
        "signData": Object {
          "signedRequest": "signedRequest",
          "url": "url",
        },
      },
      Object {
        "draftId": "cells---draft",
        "filename": "filename",
        "id": "urlId",
        "signData": Object {
          "signedRequest": "signedRequest",
          "url": "url",
        },
      },
    ],
    "comicId": "comicUrlId",
  },
]
`;
